src/test/ui/feature-gate-exhaustive_integer_patterns.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/feature-gate-exhaustive_integer_patterns.rs:13:11
   |
LL |     match x { //~ ERROR non-exhaustive patterns: `_` not covered
   |           ^ pattern `_` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
